--- a/students/signUp.html
+++ b/students/signUp.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masai School 2.0 || Sign Up</title>
-    <link rel="stylesheet" href="../assist/style/login.css">
+    <link rel="icon" sizes="32x32" href="https://d27028dliefpk3.cloudfront.net/assets/favicon/favicon-32x32.png" class="jsx-397bb7cff0cecce7">
+        <link rel="stylesheet" href="../assist/style/login.css">
 </head>
 
 <body>
