--- a/superadmin/dashbord.html
+++ b/superadmin/dashbord.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Admin Deshbord</title>
+    <link rel="icon" sizes="32x32" href="https://d27028dliefpk3.cloudfront.net/assets/favicon/favicon-32x32.png"
+        class="jsx-397bb7cff0cecce7">
     <link rel="stylesheet" href="../assist/style/dashbord.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -38,7 +40,7 @@
     <section class="dashbordoptionPartSection">
         <div class="seeTimeNow"></div>
         <h1>Hello <span id="usernameDisplayOption"></span> ! Welcome to super admin panel</h1>
- 
+
     </section>
 
     <!--  viewProfileSection-->
@@ -217,7 +219,7 @@
                 </select>
                 <label for="">Enter Lecture</label>
                 <input type="text" placeholder="Enter Lecture Name" id="NCLname" value="" required="required">
-                <label for="">Lecture url</label>
+                <label for="">Lecture Video ID</label>
                 <input type="url" placeholder="Enter courses fees" id="CLUreat" value="" required="required">
                 <label for="">Enter about Lecture</label>
                 <input type="text" placeholder="Enter about courses" id="CLDdis" value="" required="required">
@@ -231,7 +233,7 @@
                 <thead>
                     <th>ID</th>
                     <th>Name</th>
-                    <th>Url</th>
+                    <th>Lecture Video ID</th>
                     <th>About</th>
                     <th>Courses</th>
                     <th>Remove</th>
@@ -246,6 +248,4 @@
 <script src="../server/js/checkuserloginornot.js"></script>
 <script src="../server/js/superadminotherpart.js"></script>
 <script src="../server/js/userprofileandproother.js"></script>
-<script src="../server/js/dashbord.js"></script>
-
 </html>
