--- a/admin/dashbord.html
+++ b/admin/dashbord.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Deshbord</title>
-    <link rel="stylesheet" href="../assist/style/dashbord.css">
+    <link rel="icon" sizes="32x32" href="https://d27028dliefpk3.cloudfront.net/assets/favicon/favicon-32x32.png" class="jsx-397bb7cff0cecce7">
+        <link rel="stylesheet" href="../assist/style/dashbord.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -18,7 +19,7 @@
                 <img src="https://www.masaischool.com/img/navbar/logo.svg" alt="">
             </div>
             <div>
-                <p>Create LECTURE </p>
+                <p onclick="openButton('.creatCouresLectureSection')">Create LECTURE </p>
                 <p onclick="openButton('.creatStudentSection')">Create Student</p>
                 <span>
                     <p onclick="profileOptionsShowFun()">profile </p><i class="fa fa-user"
@@ -38,19 +39,6 @@
         <h1>Hello <span id="usernameDisplayOption"></span> ! Welcome to admin panel</h1>
  
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!--  viewProfileSection-->
     <section class="viewProfileSection userfillform">
@@ -140,7 +128,41 @@
             </table>
         </div>
     </section>
+    <!-- CREATE Lecture COURSES creatCouresLectureSection-->
+    <section class="creatCouresLectureSection userfillform">
+        <span class="closeButtonOption" onclick="closeButton('.creatCouresLectureSection')">X</span>
+        <div class="box">
+            <h1>ADD NEW LECTURE</h1>
+            <div class="form">
+                <label for="">Select Courses</label>
+                <select id="selectCoursesOption">
+                </select>
+                <label for="">Enter Lecture</label>
+                <input type="text" placeholder="Enter Lecture Name" id="NCLname" value="" required="required">
+                <label for="">Lecture Video ID</label>
+                <input type="url" placeholder="Enter courses fees" id="CLUreat" value="" required="required">
+                <label for="">Enter about Lecture</label>
+                <input type="text" placeholder="Enter about courses" id="CLDdis" value="" required="required">
 
+                <input type="submit" value="Create Courses" onclick="creatcouresLectureUserShowList()" />
+            </div>
+        </div>
+
+        <div class="dataTableAdminList">
+            <table>
+                <thead>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Lecture Video ID</th>
+                    <th>About</th>
+                    <th>Courses</th>
+                    <th>Remove</th>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
 </body>
 <script src="../server/js/checkuserloginornot.js"></script>
