--- a/superadmin/login.html
+++ b/superadmin/login.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masai School 2.0 || Super Admin</title>
+    <link rel="icon" sizes="32x32" href="https://d27028dliefpk3.cloudfront.net/assets/favicon/favicon-32x32.png"
+        class="jsx-397bb7cff0cecce7">
     <link rel="stylesheet" href="../assist/style/adminandsulogin.css">
     <style>
-        
+
     </style>
 </head>
 
@@ -38,4 +40,5 @@
 
 </body>
 <script src="../server/js/admin798andsuperAdminlogin.js"></script>
+
 </html>
