--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                                 <p>EVENTS</p>
                         </div>
                         <div>
-                                <a href="./students/login.html" class="applyNowFor">Apply Now for Free</a>
+                                <a href="./students/signUp.html" class="applyNowFor">Apply Now for Free</a>
                         </div>
                         <div>
-                                <a href="./students/login.html">login</a>
+                                <a href="./login.html">login</a>
                         </div>
                 </nav>
                 <div id="menu-list-4" onclick="popupshowOrNotCoures()">
@@ -49,7 +49,7 @@
                         <p style="color: rgb(108 100 100); font-weight: 400;">Launch your dream career</p>
                         <p>at 0 upfront fee.</p>
                         <img src="https://www.masaischool.com/img/homepage/scribble.png" alt="">
-                        <a href="./students/login.html" class="applyNowFor">Apply Now for Free</a>
+                        <a href="./students/signUp.html" class="applyNowFor">Apply Now for Free</a>
                 </div>
         </section>
         <section class="studentsImgSeliderSection">
