--- a/students/dashbord.html
+++ b/students/dashbord.html
@@ -140,8 +140,8 @@
                 <input type="password" placeholder="Old password" id="oldpasscheck" value="">
                 <label for="">New Password</label>
                 <input type="password" placeholder="New password" id="newpasscheck" value="">
-                <label for="">Conform Password</label>
-                <input type="password" placeholder="Conform password" id="cnewpasscheck" value="">
+                <label for="">Confirm Password</label>
+                <input type="password" placeholder="Confirm password" id="cnewpasscheck" value="">
 
                 <input id="signup" type="submit" value="Update Password" onclick="updatepassworduserfun()" />
             </div>
