--- a/students/login.html
+++ b/students/login.html
@@ -30,7 +30,7 @@
 
                 <p></p>
 
-                <input id="signup" type="submit" value="SIGN UP" />
+                <input id="signup" type="submit" value="SIGN IN" />
             </form>
             <p>Don't have an account? <a href="../students/signUp.html"> Sign Up</a> </p>
         </div>
