--- a/login.html
+++ b/login.html
@@ -11,16 +11,17 @@
         body {
             background-image: url(https://images.unsplash.com/photo-1550439062-609e1531270e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
             overflow: hidden;
-            background-repeat: no-repeat;
             width: 100%;
             height: 100vh;
             margin: 0;
+            background-size: 100%;
+
         }
 
         .logo {
             position: fixed;
-            right: 442px;
-            top: 68px;
+            right: 530px;
+            top: 51px;
         }
 
         .logo img {
@@ -37,7 +38,7 @@
             height: 500px;
             background-color: white;
             bottom: 50px;
-            left: 50px;
+            right: 50px;
             border-radius: 15px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
             text-transform: uppercase;
@@ -47,11 +48,11 @@
 
         a {
             text-decoration: none;
-            
+
         }
-        a:hover{
-            
-        }
+
+        a:hover {}
+
         button {
             width: 300px;
             padding: 10px;
@@ -65,7 +66,8 @@
             background-image: linear-gradient(rgba(0, 0, 255, 0.205), rgba(255, 0, 0, 0.212));
             cursor: pointer;
         }
-        button:hover{
+
+        button:hover {
             color: blue;
             background-image: linear-gradient(rgba(255, 0, 0, 0.212), rgba(0, 0, 255, 0.205));
         }
